<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="18dp"
    tools:context=".debugging.BreakPointActivity">

    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/firstEdit"
        android:hint="enter a number"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="#b7b7b7"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:layout_marginTop="12dp"
        android:id="@+id/secondEdit"
        android:hint="enter a number"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/firstEdit"
        app:layout_constraintRight_toRightOf="parent"
        android:backgroundTint="#b7b7b7"
        app:layout_constraintLeft_toLeftOf="parent"/>


        <RelativeLayout
            android:id="@+id/buttons"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/secondEdit"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:id="@+id/firstLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:onClick="onNext"
                    android:id="@+id/addBtn"
                    android:layout_width="wrap_content"
                    android:text="Add"
                    android:textColor="#30409e"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/divisionBtn"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:text="DIV"
                    android:textColor="#30409e"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/firstLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/subtractBtn"
                    android:layout_width="wrap_content"
                    android:text="Sub"
                    android:textColor="#30409e"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/multiplyBtn"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:text="MUL"
                    android:textColor="#30409e"
                    android:textStyle="bold"
                    android:layout_height="wrap_content"/>

            </LinearLayout>


        </RelativeLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_marginTop="34dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/buttons"/>

    <Button
        android:id="@+id/nextBtn"
        android:onClick="onNext"
        android:layout_marginTop="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="NextPage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttons"

        />





</androidx.constraintlayout.widget.ConstraintLayout>