<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".debugging.TestActivity">

    <TextView
        android:id="@+id/newText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="MY NEW TEXT"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textSize="40sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>