<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".paging.PagingActivity">

   <Button
       android:onClick="onNext"
       android:id="@+id/next"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
        android:text="Next Page !!!"
       android:background="@color/colorPrimaryDark"
       android:textColor="#ffffff"
       android:textAllCaps="false"
       app:layout_constraintBottom_toTopOf="@+id/swiperLayout"/>
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:layout_marginTop="12dp"
        android:id="@+id/swiperLayout"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/next"
        android:layout_height="wrap_content">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>





</androidx.constraintlayout.widget.ConstraintLayout>